[metadata]
name = pyquirc
version = 0.2.0
author = Maximilian Nöthe
author_email = maximilian.noethe@tu-dortmund.de
description = Python bindings for quirc, via pybind11
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT

classifiers =
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
	Topic :: Scientific/Engineering :: Image Recognition
	Topic :: Scientific/Engineering :: Image Processing

[options]
python_requires = >=3.7

[options.extras_require]
tests = pytest; qrcode; pillow; numpy

[options.entry_points]
console_scripts =
    pyquirc_decode = quirc.__main__:main
